拿掉太吃效能的部分。

--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 	<title>Glenn</title>
 	<script src="js/jquery-3.1.0.min.js"></script>
-  <link rel="stylesheet" href="stylesheets/reset.css">
-	<link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <svg class="clip-svg">
 	<clippath id="glenn">
@@ -1409,7 +1409,7 @@
 									</a>
 									<a href="http://codepen.io/square0225/" target="_blank" class="social__icon icon-codepen">
 									</a>
-									<a href="https://github.com/SquareJong/" target="_blank" class="social__icon icon-github">
+									<a href="https://github.com/GlennJong/" target="_blank" class="social__icon icon-github">
 									</a>
 								</div>
 							</div>
@@ -1509,8 +1509,8 @@
 		<!-- styleControl -->
 		<div id="styleControl">
 			<button class="green"></button>
-			<button class="blue"></button>
-			<button class="orange"></button>
+			<!-- <button class="blue"></button> -->
+			<!-- <button class="orange"></button> -->
 		</div>
 
 		<!-- Parallax -->
@@ -1564,7 +1564,7 @@
 					</i>
 				</div>
 			</div>
-			<div class="parallax__item blue">
+<!-- 			<div class="parallax__item blue">
 				<div data-delta-x="50" data-delta-y="50" class="blue--l1 parallax--layer parallax--base">
 				</div>
 				<div data-delta-x="40" data-delta-y="40" class="blue--l2 parallax--layer">
@@ -1610,7 +1610,7 @@
         <div data-delta-x="10" data-delta-y="999" class="orange--l4 parallax--layer parallax--base">
           <div class="orange__item orange-ground"></div>
         </div>
-      </div>
+      </div> -->
 		</div>
 	</div>
 	<script src="js/myscript.js"></script>
